# palpy

./: .gitignore  .gitmodules  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  cpal.pxd  pal.pyx  pal.pyx.in  pyproject.toml  setup.py  test_pal.py
.github/workflows/: build.yaml
support/: palvers.py  sst2pydoc.py
